
if(BUILD_CLICKTOCALL)
   add_subdirectory(clicktocall)
endif()
if(WITH_SSL)
  add_subdirectory(sipdial)
endif()
if(BUILD_ICHAT_GW)
   add_subdirectory(ichat-gw)
endif()
if(BUILD_TELEPATHY_CM)
   add_subdirectory(telepathy)
endif()
if(BUILD_RECONSERVER)
   add_subdirectory(reConServer)
endif()
if(NETSNMP_AGENT_FOUND)
   add_subdirectory(registration-agent)
endif()
if(USE_GSTREAMER)
   add_subdirectory(echoTest)
endif()

